[package]
name = "kataster"
version = "0.1.0"
authors = ["Boris Boutillier <boris.boutillier@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.*"
#bevy = { path = "../bevy" }
bevy = "0.3.*"
bevy_rapier2d = "0.5.*"
byteorder = "1.*"
image = "0.23.*"
rand = "0.7.*"
serde = "*"

#[patch.crates-io]
#bevy = { path = "../bevy" }
