[package]
name = "breedmatic"
version = "0.2.1"
authors = [
    "Dorota Czaplejewicz <gihuac.dcz@porcupinefactory.org>",
    "Boris Boutillier <boris.boutillier@gmail.com>"
]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
anyhow = "1.*"
bevy = "0.3.*"
bevy_prototype_lyon = "0.1.*"
bevy_rapier2d = "0.6.*"
byteorder = "1.*"
image = "0.23.*"
rand = "0.7.*"
rand_distr = "0.2.*"
serde = "*"

#[patch.crates-io]
#bevy = { path = "../bevy" }
